--- a/app/src/main/res/layout/activity_detail_vendor.xml
+++ b/app/src/main/res/layout/activity_detail_vendor.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/bg_motorcycle">
 
         <ImageButton
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
