--- a/app/src/main/res/layout/activity_search_vendor.xml
+++ b/app/src/main/res/layout/activity_search_vendor.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_home"
     android:padding="8dp"
-    tools:context=".home.pelayanan.PelayananActivity">
+    tools:context=".home.searchVendor.SearchVendorActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -114,6 +114,16 @@
         <!--            tools:listitem="@layout/item_tempat" />-->
         <!--    </ScrollView>-->
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_location"
@@ -125,7 +135,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sp_category"
-            tools:listitem="@layout/item_tempat" />
+            tools:listitem="@layout/item_vendor" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
