--- a/app/src/main/res/layout/alert_konfirmasi_pembayaran.xml
+++ b/app/src/main/res/layout/alert_konfirmasi_pembayaran.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -25,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="Pembayaran Telah Berhasil!"
+                android:text="@string/txt_complete_payment"
                 android:textColor="#324B4A"
                 android:textSize="20sp" />
 
@@ -38,7 +37,7 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_complete"
+                android:id="@+id/btn_finish_payment_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
