--- a/app/src/main/res/layout/item_booking.xml
+++ b/app/src/main/res/layout/item_booking.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
+    android:id="@+id/cv_item_booking"
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:layout_gravity="center"
@@ -10,7 +10,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="20dp"
-    card_view:cardBackgroundColor="#3D84A8"
+    card_view:cardBackgroundColor="@color/greenOpen"
     card_view:cardCornerRadius="16dp">
 
         <TextView
