--- a/app/src/main/res/layout/item_notifications.xml
+++ b/app/src/main/res/layout/item_notifications.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerInParent="true">
+    android:layout_height="wrap_content">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_item_photo"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/ic_notifications2" />
 
         <TextView
             android:id="@+id/tv_notifications"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/img_item_photo"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/bluePrimary"
             android:text="@string/pembayaran"
             android:textSize="16sp" />
 
@@ -31,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_below="@+id/tv_notifications"
-            android:layout_marginTop="12dp"
+            android:layout_marginVertical="24dp"
             android:background="#C4C4C4" />
 
 
