--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="250dp"
     android:layout_gravity="center"
     android:layout_marginHorizontal="32dp"
     android:layout_marginTop="8dp"
@@ -34,6 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/img_wash_type"
             android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
             android:text="@string/first_type_wash"
             android:textColor="@color/bluePrimary" />
 
@@ -54,4 +56,4 @@
             app:strokeColor="@android:color/holo_red_dark" />
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
