--- a/app/src/main/res/layout/activity_search_vendor.xml
+++ b/app/src/main/res/layout/activity_search_vendor.xml
@@ -86,16 +86,29 @@
 
         </RelativeLayout>
 
-        <Spinner
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:id="@+id/sp_category"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/bg_kategori"
-            android:entries="@array/kategori"
-            android:padding="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             app:layout_constraintStart_toStartOf="@+id/sv_location"
-            app:layout_constraintTop_toBottomOf="@+id/sv_location" />
+            app:layout_constraintTop_toBottomOf="@+id/sv_location">
+
+            <AutoCompleteTextView
+                android:id="@+id/ctv_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:text="Kategori" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!--    <ScrollView-->
         <!--        android:layout_width="match_parent"-->
