--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:layout_gravity="center"
-    android:layout_marginHorizontal="32dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     android:orientation="vertical"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
@@ -30,12 +29,13 @@
 
         <TextView
             android:id="@+id/tv_name_type"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/img_wash_type"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             android:textSize="16sp"
+            android:maxWidth="180dp"
             android:text="@string/first_type_wash"
             android:textColor="@color/bluePrimary" />
 
