--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -34,6 +34,7 @@
             android:id="@+id/rl_item_vendor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
             android:background="@color/bluePrimary">
 
             <TextView
@@ -55,10 +56,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_name"
                 android:layout_alignParentStart="true"
-                android:fontFamily="@font/poppins"
                 android:layout_marginStart="12dp"
+                android:layout_marginEnd="28dp"
+                android:layout_toStartOf="@+id/tv_status"
+                android:fontFamily="@font/poppins"
                 android:padding="4dp"
-                android:text="@string/jl_mt_haryono"
+                android:text="@string/alamat_ex"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
