--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -39,6 +39,18 @@
             android:text="@string/first_type_wash"
             android:textColor="@color/bluePrimary" />
 
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_name_type"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:textSize="20sp"
+            android:maxWidth="180dp"
+            android:text="@string/harga"
+            android:textColor="@color/bluePrimary" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_choose_type"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
