--- a/app/src/main/res/layout/item_booking.xml
+++ b/app/src/main/res/layout/item_booking.xml
@@ -10,18 +10,21 @@
     android:layout_marginTop="4dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="20dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/greenOpen"
     card_view:cardCornerRadius="16dp">
 
-        <TextView
-            android:id="@+id/tv_jamBuka"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
-            android:layout_gravity="center"
-            tools:text="Jam Buka"
-            android:textColor="@color/white"/>
+    <TextView
+        android:id="@+id/tv_jamBuka"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        tools:text="Jam Buka" />
 </androidx.cardview.widget.CardView>
