--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -2,10 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_item_booking"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="24dp"
-    app:cardCornerRadius="20dp">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="20dp"
+    app:rippleColor="@color/md_teal_400">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,22 +34,21 @@
                 tools:ignore="RtlHardcoded,UsingOnClickInXml" />
         </FrameLayout>
 
-
         <RelativeLayout
             android:id="@+id/rl_item_vendor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:background="@color/bluePrimary">
+            android:background="@color/bluePrimary"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:layout_marginStart="12dp"
                 android:fontFamily="@font/poppins"
                 android:padding="4dp"
-                android:layout_marginStart="12dp"
                 android:text="@string/jaya_makmur_wash"
                 android:textColor="@color/white"
                 android:textSize="14sp"
