--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -34,22 +34,38 @@
             android:layout_below="@id/img_wash_type"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
-            android:textSize="16sp"
             android:maxWidth="180dp"
             android:text="@string/first_type_wash"
-            android:textColor="@color/bluePrimary" />
+            android:textColor="@color/bluePrimary"
+            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name_type"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
-            android:textSize="20sp"
             android:maxWidth="180dp"
-            android:text="@string/harga"
-            android:textColor="@color/bluePrimary" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rp"
+                android:textColor="@color/bluePrimary"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/harga"
+                android:textColor="@color/bluePrimary"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_choose_type"
