--- a/app/src/main/res/drawable/bg_search.xml
+++ b/app/src/main/res/drawable/bg_search.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="true" android:state_focused="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#F6F3F3" />
+            <corners android:radius="20dp" />
+            <size android:width="330dp" android:height="30dp" />
+            <stroke android:width="1dp" android:color="@color/design_default_color_primary" />
+        </shape>
+
+    </item>
+
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="#F6F3F3"/>
-            <corners android:radius="20dp"/>
-            <size android:width="330dp" android:height="30dp"/>
+            <solid android:color="#F6F3F3" />
+            <corners android:radius="20dp" />
+            <size android:width="330dp" android:height="30dp" />
         </shape>
     </item>
 </selector>
