--- a/app/src/main/res/layout/activity_search_vendor.xml
+++ b/app/src/main/res/layout/activity_search_vendor.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
 
-        <androidx.appcompat.widget.SearchView
+        <SearchView
             android:id="@+id/sv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
