--- a/appmitra/src/main/res/layout/activity_main.xml
+++ b/appmitra/src/main/res/layout/activity_main.xml
@@ -12,16 +12,33 @@
         android:background="@color/bluePrimary"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_hello"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            android:text="@string/halo_pak_jamal"
-            android:textColor="@color/white"
-            android:textSize="44sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="40dp"
+                android:text="@string/halo_pak_jamal"
+                android:textColor="@color/white"
+                android:textSize="44sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_owner_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="40dp"
+                android:text="nama owner"
+                android:textColor="@color/white"
+                android:textSize="44sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_week"
@@ -97,7 +114,6 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </FrameLayout>
-
 
         <FrameLayout
             android:id="@+id/fl_stats"
