--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -25,11 +25,11 @@
     </FrameLayout>
 
     <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cg_status_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        app:checkedChip="@id/chip_cat_progress"
         app:selectionRequired="true"
         app:singleSelection="true">
 
@@ -38,7 +38,7 @@
             style="@style/customChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sedang Berjalan"
+            android:text="@string/on_progress"
             android:textAlignment="center"
             android:textStyle="bold"
             app:chipStrokeColor="@color/md_grey_500"
@@ -49,7 +49,7 @@
             style="@style/customChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Selesai"
+            android:text="@string/done"
             android:textAlignment="center"
             android:textStyle="bold"
             app:chipStrokeColor="@color/md_grey_500"
