--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -49,7 +49,7 @@
             style="@style/customChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/done"
+            android:text="@string/selesai"
             android:textAlignment="center"
             android:textStyle="bold"
             app:chipStrokeColor="@color/md_grey_500"
